--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="btn">
                     <button class="login_btn" type="button">로그인</button>
-                    <a href="membership.html"><button class="signup" type="button">회원가입</button></a>
+                    <a href="/membership"><button class="signup" type="button">회원가입</button></a>
                 </div>
             </div>
         </div>
