--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,8 +42,14 @@
     overflow: hidden;
 }
 
+.btnWrap{
+    position:absolute;
+    top : -140px;
+    right : 50px;
+}
 .postWrap{
     margin: 150px;
+    position:relative;
 }
 .postWrap>.btnWrap>.search{
     border: none;
@@ -51,14 +57,12 @@
 }
 .postWrap>.post_list>.list{
     display: flex;
-    justify-content: start;
-    flex-wrap: wrap;
+    justify-content: space-around;
     margin-top: 15px;
 }
 .postWrap>.post_list>.list>li{
     width: 200px;
     height: 100px;
-    margin-right: 10px;
     border: 1px solid #232323;
 }
 .postWrap>.post_list>.list>li>a{
@@ -77,17 +81,6 @@
     color: #fff;
 }
 
-#image{
-    width: 200px;
-    height: 70px;
-    overflow: hidden;
-    padding-top: 30px;
-}
-#image>img{
-    display: block;
-    width: 200px;
-    height: 70px;
-}
 .writeWrap{
     margin: 200px;
 }
@@ -159,3 +152,38 @@
 .viewWrap>.posts>.content>p{
     padding: 20px;
 }
+
+#image{
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+
+}
+#image>img{
+    display: block;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+}
+
+.post{
+    width : 250px;
+    height: 250px;
+    border : 8px solid black;
+    display : block;
+    border-radius: 20px;
+
+    height: auto;
+    margin-right: 20px;
+}
+
+
+#searchTitle {
+    border : 1px solid black;
+    width: 250px;
+    text-align: center;
+    background-color: black;
+    color:white;
+
+}
+
