--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,33 @@
     <link rel="stylesheet" href="../static/css/footer.css">
     <link rel="stylesheet" href="../static/css/login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    
+        <script>
+        {% if msg %}
+        alert("{{ msg }}")
+        {% endif %}
+
+        function login() {
+            $.ajax({
+                type: "POST",
+                url: "/api/login",
+                data: {id_give: $('#userid').val(), pw_give: $('#userpw').val()},
+                success: function (response) {
+                    if (response['result'] == 'success') {
+
+                        $.cookie('mytoken', response['token']);
+
+                        alert('로그인 완료!')
+                        window.location.href = '/'
+                    } else {
+                        alert(response['msg'])
+                    }
+                }
+            })
+        }
+
 
     </script>
 </head>
@@ -24,11 +50,11 @@
         <div class="loginForm">
             <div class="login">
                 <div class="user">
-                    <label for="user_id">ID:<input type="text" id="user_id" placeholder="아이디를 입력해주세요"></label>
-                    <label for="user_pw">PW:<input type="text" id="user_pw" placeholder="패스워드를 입력해주세요"></label>
+                    <label for="userid">ID:<input type="text" id="userid" placeholder="아이디를 입력해주세요"></label>
+                    <label for="userpw">PW:<input type="text" id="userpw" placeholder="패스워드를 입력해주세요"></label>
                 </div>
                 <div class="btn">
-                    <button class="login_btn" type="button">로그인</button>
+                    <button class="login_btn" type="button" onclick="login()">>로그인</button>
                     <a href="/membership"><button class="signup" type="button">회원가입</button></a>
                 </div>
             </div>
