--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript">
 
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 </head>
 
 <body>
