--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -50,19 +50,26 @@
             })
         }
 
-        // function search() {
-        //     $.ajax({
-        //         type: "GET",
-        //         url: "/post_list",
-        //         data: {},
-        //         success: function (response) {
-        //             let search_text = $('#search').val();
-        //             let db_text = response['title']
-        //             console.log(response)
-        //
-        //         }
-        //     })
-        // }
+        function search() {
+            $.ajax({
+                type: "GET",
+                url: "/list",
+                data: {},
+                success: function (response) {
+                    let lists = response['all_lists']
+                    for (let i = 0; i < lists.length; i++) {
+                        let title = lists[i]['title']
+                        let include = $('#search').val()
+                        if(title.includes(include) == true && include !== null){
+                            $('.post').eq(i).css('display','block')
+                        }else{
+                            $('.post').eq(i).css('display','none')
+                        }
+                    }
+                }
+            })
+
+        }
     </script>
 </head>
 
