--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -1,3 +1,10 @@
+<head>
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Kirang+Haerang&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+</head>
+
 <header id="header">
 
     <nav>
@@ -5,6 +12,7 @@
             <a href="/"><img src="../../static/img/logo.png" alt="logo">
             </a>
         </h1>
+        <h2 class="title">Arsenal Fan Site</h2>
         <ul class="gnb">
             <li><a href="/login">로그인</a></li>
             <li><a href="/post_list">게시글</a></li>
