--- a/static/css/login.css
+++ b/static/css/login.css
@@ -10,7 +10,7 @@
     width: 30%;
     height: 200px;
     margin: 250px auto 0;
-    border: 1px solid #000;
+    border: 3px solid #48c774;
     border-radius: 25px;
 }
 
@@ -26,5 +26,5 @@
 .login>.btn{
     width: 250px;
     height: 50px;
-    margin: 20px auto;
+    margin: 10px auto 0;
 }
