--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,17 +34,19 @@
     color: #fff;
     line-height: 2.6;
     font-size: 18px;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 .bgWrap>.bg>img{
     display: block;
     width: 100%;
     height: 100%;
     overflow: hidden;
+    object-fit: cover;
 }
 
 .btnWrap{
     position:absolute;
-    top : -140px;
+    top : -100px;
     right : 50px;
 }
 .postWrap{
@@ -53,32 +55,35 @@
 }
 .postWrap>.btnWrap>.search{
     border: none;
-    border-bottom:1px solid #232323 ;
+    border-bottom:2px solid #48c774;
 }
 .postWrap>.post_list>.list{
     display: flex;
-    justify-content: space-around;
-    margin-top: 15px;
+    flex-wrap: wrap;
+    width: 1280px;
+    margin: 15px auto;
 }
 .postWrap>.post_list>.list>li{
-    width: 200px;
-    height: 100px;
-    border: 1px solid #232323;
+    width: 250px;
+    height: 250px;
+    border: 1px solid #48c774;
 }
-.postWrap>.post_list>.list>li>a{
-    display: block;
+.postWrap>.post_list>.list a{
+
     position: relative;
-    width: 100%;
-    height: 100%;
+
 }
-.postWrap>.post_list>.list>li>a>p{
+.postWrap>.post_list>.list a p{
+    font-family: 'Noto Sans KR', sans-serif;
+    text-align: center;
     position: absolute;
     top: 0;
-    width: 186px;
+    width: 236px;
     height: 15px;
-    background-color: #232323;
+    background-color:#48c774;
     padding: 7px;
     color: #fff;
+
 }
 
 .writeWrap{
@@ -100,10 +105,12 @@
 
 .writeBox>.photo{
     width: 1086px;
-    background-color: #232323;
+    background-color: #48c774;
     color: #fff;
 }
 .writeBox>div>#text{
+    min-width: 1080px;
+    max-width: 1080px;
     width: 100%;
     height: 500px;
 }
@@ -161,20 +168,22 @@
 }
 #image>img{
     display: block;
-    width: 250px;
-    height: 250px;
+    width: 260px;
+    height: 260px;
     object-fit: cover;
 }
 
 .post{
     width : 250px;
     height: 250px;
-    border : 8px solid black;
+    border : 5px solid #48c774;
+    background-color: #48c774;
     display : block;
-    border-radius: 20px;
-
+    border-top-right-radius: 15px;
+    border-top-left-radius:15px;
     height: auto;
-    margin-right: 20px;
+    margin-right: 55px;
+    margin-bottom: 35px;
 }
 
 
@@ -187,3 +196,15 @@
 
 }
 
+.title{
+    color: #fff;
+    font-size: 70px;
+    font-weight: bold;
+    font-family: 'Kirang Haerang', cursive;
+}
+
+.comment{
+    color: #fff;
+     font-weight: normal;
+    font-family:"Noto Sans KR", Serif;
+}
