--- a/static/css/style.css
+++ b/static/css/style.css
@@ -208,3 +208,10 @@
      font-weight: normal;
     font-family:"Noto Sans KR", Serif;
 }
+
+.content>img{
+    display: block;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
