--- a/templates/post_write.html
+++ b/templates/post_write.html
@@ -46,7 +46,7 @@
     <div class="writeWrap">
         <div class="top">
             <div class="title"><input type="text" id="title" placeholder="제목을 입력해 주세요"></div>
-            <div class="addpost"><button type="button" id="addpost" onclick="posting()" >글 추가
+            <div class="addpost"><button type="button" id="addpost" onclick="posting()" >저장
                 &#43;</button></div>
         </div>
 
