--- a/templates/post_view.html
+++ b/templates/post_view.html
@@ -56,8 +56,8 @@
 <div class="viewWrap" id="view">
     <div class="posts">
         <div class="info">
-            <h1 id="show_writer">{{ title }}</h1>
-            <h2 id="show_date">{{ time }}</h2>
+            <h1 id="show_writer">제목 : {{ title }}</h1>
+            <h2 id="show_date">작성일 : {{ time }}</h2>
         </div>
 
         <div class="content"><img src="../static/img/{{ file }}" alt="">
