--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -91,11 +91,11 @@
 </head>
 
 <body>
-{% include "layout/header.html" %}
+{% include "layout/header2.html" %}
 {% block section %}
 <div class="postWrap">
     <div class="btnWrap">
-        <button class="button is-success is-outlined"><a href="/post_write">글 쓰기 +</a></button>
+        <button class="button is-success is-outlined" style="margin-right: 600px"><a href="/post_write" >글 쓰기 +</a></button>
         <input type="text" id="search" class="search" placeholder="제목을 검색해 주세요">
         <button id="searchBtn" onclick="search()">검색 &#128269;</button>
 
