--- a/templates/post_write.html
+++ b/templates/post_write.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    {% include "layout/header.html" %}
+    {% include "layout/header2.html" %}
     {% block section %}
     <div class="writeWrap">
         <div class="top">
