--- a/static/css/header.css
+++ b/static/css/header.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1280px;
+    max-width: 1080px;
     margin: 0px auto;
     padding-top: 10px;
 }
