--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -52,8 +52,8 @@ a{
 
 button{
 	background-color: #fff;
-    border-color: #48c774;
-    color: #48c774;
+    border-color: #db0007;
+    color: #db0007;
 	cursor: pointer;
     justify-content: center;
     padding-bottom: calc(0.5em - 1px);
@@ -66,7 +66,7 @@ button{
 }
 
 button:hover{
-	background-color:#48c774;
+	background-color:#db0007;
 	transition: .3s;
 	color: #fff;
 	border-radius: 15px;
