--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,7 +62,7 @@
 
 .postWrap > .btnWrap > .search {
     border: none;
-    border-bottom: 2px solid #48c774;
+    border-bottom: 2px solid #db0007;
 }
 
 .postWrap > .post_list > .list {
@@ -75,7 +75,7 @@
 .postWrap > .post_list > .list > li {
     width: 250px;
     height: 250px;
-    border: 1px solid #48c774;
+    border: 1px solid #db0007;
 }
 
 .postWrap > .post_list > .list a {
@@ -91,7 +91,7 @@
     top: 0;
     width: 236px;
     height: 15px;
-    background-color: #48c774;
+    background-color: #db0007;
     padding: 7px;
     color: #fff;
 
@@ -116,7 +116,7 @@
 
 .writeBox > .photo {
     width: 1086px;
-    background-color: #48c774;
+    background-color: #db0007;
     color: #fff;
 }
 
@@ -163,7 +163,6 @@
 }
 
 .viewWrap > .posts > .content {
-    height: 500px;
     margin-top: 20px;
 }
 
@@ -188,8 +187,8 @@
 .post {
     width: 250px;
     height: 250px;
-    border: 5px solid #48c774;
-    background-color: #48c774;
+    border: 5px solid #db0007;
+    background-color: #db0007;
     display: block;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
@@ -229,8 +228,5 @@
 .content > img {
     display: block;
     width: 100%;
-    height: 100%;
-    max-width: 1080px;
-    max-height: 500px;
     object-fit: cover;
 }
